<resources>
    <string name="app_name">CapstoneDuaSatu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="daftar">Register</string>
    <string name="hint1">To Access App</string>
    <string name="email">Email</string>
    <string name="hint_email">Input your email...</string>
    <string name="kata_sandi">Password</string>
    <string name="hint_password">Input your password...</string>
    <string name="hint_daftar">Dont have account yet? Register</string>
    <string name="deteksi">Detection</string>
    <string name="camera">Add Image</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="hint2">for getting an account!</string>
    <string name="nama">Name</string>
    <string name="hint_nama">Input your fullname...</string>
    <string name="hint_login">Already have account? login</string>
    <string name="Home">Home</string>
    <string name="profile">My Profile</string>
    <string name="desc_image">image profile</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="hint_language">Phone Language</string>
    <string name="logout">Logout</string>
    <string name="searchview">Find Article...</string>
    <string name="gallery">GALLERY</string>
    <string name="add_desc">Add description..</string>
    <string name="hint_judul">Add title</string>
    <string name="upload">UPLOAD</string>
    <string name="about">About</string>
    <string name="about_us">About Us</string>
</resources>