<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wraperprofiliki"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_tittle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/desc_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.064"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tittle"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="100dp"
            android:layout_toEndOf="@id/img_profile"
            android:gravity="start|center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/img_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_profile"
            app:layout_constraintTop_toTopOf="@+id/img_profile">
            <TextView
                android:id="@+id/name_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text = "Username"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/email_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text= "email@gmail.com"
                android:textSize="14sp"
                android:textStyle="italic" />
        </LinearLayout>


        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:background="@color/Grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.858"
            app:layout_constraintStart_toEndOf="@+id/img_profile"
            app:layout_constraintTop_toBottomOf="@+id/line"
            app:layout_constraintVertical_bias="0.061"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rTema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp">

                <ImageView
                    android:id="@+id/ic_theme"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/theme"
                    android:src="@drawable/ic_light_mode" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/ic_theme"
                    android:gravity="start|center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_theme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/theme"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_theme_isi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/dark_mode"
                        android:textSize="14sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout android:id="@+id/rLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/ic_language"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/language"
                    android:src="@drawable/ic_language"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/ic_language"
                    android:gravity="start|center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_language_isi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/hint_language"
                        android:textSize="14sp" />

                </LinearLayout>

            </RelativeLayout>
            <RelativeLayout android:id="@+id/rAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/ic_about"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/about"
                    android:src="@drawable/ic_help"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/ic_about"
                    android:gravity="start|center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_about_isi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/about_us"
                        android:textSize="14sp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/shape_rectangle_primary_green"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_anchorGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>